SFDC Automation/src/objects/Ryder_Surveys__c.object
<CustomObject>
    <fields>
        <fullName>Ryder_Customer__c</fullName>
        <formula>Customer_Branch__r.Ryder_HQ_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ryder Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ryder_Customer_del__c</fullName>
        <formula>Customer_Branch__r.Ryder_HQ_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ryder Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Billing_Accuracy__c</fullName>
        <label>Satisfaction with billing accuracy</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Billing_Format__c</fullName>
        <label>Satisfaction with billing format</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Billing_Timeliness__c</fullName>
        <label>Satisfaction with billing timeliness</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction_Ryder_Branch__c</fullName>
        <label>Satisfaction With Ryder Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction_performace_review__c</fullName>
        <label>Satisfaction With Performance Review</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction_with_Rental_Vehicles__c</fullName>
        <label>Satisfaction with Rental Vehicles</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction_with_other_provider__c</fullName>
        <label>Satisfaction with other provider</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction_with_the_overall_Value__c</fullName>
        <label>Satisfaction with the overall Value</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Conducted_By__c</fullName>
        <description>This is the alias of the person that conducted the survey.</description>
        <label>Survey Conducted By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Details_Loaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether data has been loaded from ClickTools daily download</description>
        <label>Survey Details Loaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Printable_Link__c</fullName>
        <description>The link to print out the results of the survey without having to store the print-out or pdf on a server.</description>
        <inlineHelpText>The link to print out the results of the survey without having to store the print-out or pdf on a server.</inlineHelpText>
        <label>Survey Printable Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey_Responder_Email__c</fullName>
        <label>Survey Responder Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Responder_Name__c</fullName>
        <label>Survey Responder Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Responder_Phone__c</fullName>
        <label>Survey Responder Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Responder_Title__c</fullName>
        <label>Survey Responder Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Submission_Date__c</fullName>
        <description>The date the survey was submitted with the responses.</description>
        <inlineHelpText>The survey was submitted on this date with the responses that can be viewed in the url.</inlineHelpText>
        <label>Survey Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_contact_preference__c</fullName>
        <label>Survey Contact Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Either</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Contact for Surveys</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Times_PDF_Emailed__c</fullName>
        <description>Number of times the email was sent out.</description>
        <label>Times PDF Emailed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_be_contacted_by_RyderDirector__c</fullName>
        <label>To be contacted by Ryder Director</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Other_Providers__c</fullName>
        <label>Do you use Other Providers?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_should_be_done_to_improve_support__c</fullName>
        <description>What, if anything, should we do to improve the support experience?</description>
        <label>What should be done to improve support</label>
        <type>TextArea</type>
    </fields>
    <label>Ryder Survey</label>
    <listViews>
        <fullName>All_surveys</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All surveys</label>
    </listViews>
    <listViews>
        <fullName>CSI_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Contact__c</columns>
        <columns>Survey_Conducted_By__c</columns>
        <columns>Survey_Submission_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ryder_Surveys__c.CSI_Survey</value>
        </filters>
        <label>CSI Surveys</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Surveys_Completed_By_Judy</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Survey_Details_Loaded__c</columns>
        <columns>Contact__c</columns>
        <columns>PDF_Emailed__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_FSL__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_RPM__c</columns>
        <columns>Customer_Sat_Likelihood_to_Renew__c</columns>
        <columns>Customer_Sat_Acct_Mgr_Satisfaction__c</columns>
        <columns>Customer_Sat_Maintenance_Satisfaction__c</columns>
        <columns>Customer_Sat_Shop_Communications__c</columns>
        <columns>Survey_Conducted_By__c</columns>
        <columns>Failed_Survey__c</columns>
        <columns>Last_PDF_Emailed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Conducted_By__c</field>
            <operation>equals</operation>
            <value>jgill</value>
        </filters>
        <filters>
            <field>Survey_Submission_Date__c</field>
            <operation>equals</operation>
            <value>10/1/2012 12:00 AM</value>
        </filters>
        <label>CS Surveys Completed By Judy</label>
        <sharedTo>
            <group>AllService</group>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Surveys_Completed_By_Scott</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4 or 5 or 6) and (7 or 8)</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Survey_Details_Loaded__c</columns>
        <columns>Contact__c</columns>
        <columns>PDF_Emailed__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_FSL__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_RPM__c</columns>
        <columns>Customer_Sat_Likelihood_to_Renew__c</columns>
        <columns>Customer_Sat_Acct_Mgr_Satisfaction__c</columns>
        <columns>Customer_Sat_Maintenance_Satisfaction__c</columns>
        <columns>Customer_Sat_Shop_Communications__c</columns>
        <columns>Survey_Conducted_By__c</columns>
        <columns>Failed_Survey__c</columns>
        <columns>Last_PDF_Emailed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Conducted_By__c</field>
            <operation>equals</operation>
            <value>swull</value>
        </filters>
        <filters>
            <field>Survey_Submission_Date__c</field>
            <operation>equals</operation>
            <value>9/25/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>Customer_Sat_Acct_Mgr_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Maintenance_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Shop_Communications__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Likelihood_to_Renew__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_FSL__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_RPM__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <label>CS Surveys Completed By Scott</label>
        <sharedTo>
            <group>AllService</group>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Surveys_Completed_By_Today_Saad</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Contact__c</columns>
        <columns>Survey_Conducted_By__c</columns>
        <columns>Customer_Sat_Acct_Mgr_Satisfaction__c</columns>
        <columns>Customer_Sat_Maintenance_Satisfaction__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_FSL__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_RPM__c</columns>
        <columns>Customer_Sat_Likelihood_to_Renew__c</columns>
        <columns>Customer_Sat_Shop_Communications__c</columns>
        <columns>Failed_Survey__c</columns>
        <columns>Last_PDF_Emailed_Date__c</columns>
        <columns>PDF_Emailed__c</columns>
        <columns>Survey_Details_Loaded__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Submission_Date__c</field>
            <operation>equals</operation>
            <value>11/5/2012 12:00 AM</value>
        </filters>
        <label>CS Surveys Completed By Today - Saad</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Surveys_Completed_Michigan_Lakes</fullName>
        <booleanFilter>1 AND (2 OR 3  OR 6) AND (4 OR 5) AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Contact__c</columns>
        <columns>Survey_Details_Loaded__c</columns>
        <columns>PDF_Emailed__c</columns>
        <columns>Last_PDF_Emailed_Date__c</columns>
        <columns>Customer_Sat_Acct_Mgr_Satisfaction__c</columns>
        <columns>Customer_Sat_Maintenance_Satisfaction__c</columns>
        <columns>Customer_Sat_Shop_Communications__c</columns>
        <columns>Customer_Sat_Likelihood_to_Renew__c</columns>
        <columns>Customer_Sat_Willingness_to_Refer__c</columns>
        <columns>Survey_Conducted_By__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_FSL__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_RPM__c</columns>
        <columns>Failed_Survey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Satisfaction_Survey__c</field>
            <operation>contains</operation>
            <value>http</value>
        </filters>
        <filters>
            <field>Customer_Sat_Acct_Mgr_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Maintenance_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_FSL__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_RPM__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Likelihood_to_Renew__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Survey_Submission_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2012 12:00 AM</value>
        </filters>
        <label>CS Surveys Completed Michigan Lakes</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Surveys_Completed_and_Not_Emailed</fullName>
        <booleanFilter>1 AND (4 OR 5)  AND (2 OR 3 OR 6 or 7) AND 8 AND 9</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Survey_Details_Loaded__c</columns>
        <columns>Contact__c</columns>
        <columns>PDF_Emailed__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_FSL__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_RPM__c</columns>
        <columns>Customer_Sat_Likelihood_to_Renew__c</columns>
        <columns>Customer_Sat_Acct_Mgr_Satisfaction__c</columns>
        <columns>Customer_Sat_Maintenance_Satisfaction__c</columns>
        <columns>Customer_Sat_Shop_Communications__c</columns>
        <columns>Survey_Conducted_By__c</columns>
        <columns>Failed_Survey__c</columns>
        <columns>Last_PDF_Emailed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PDF_Emailed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Customer_Sat_Acct_Mgr_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Maintenance_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_FSL__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_RPM__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Likelihood_to_Renew__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Shop_Communications__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Survey_Submission_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>Survey_Details_Loaded__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CS Surveys Completed and Not Emailed</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Surveys_Special_Email_Request</fullName>
        <booleanFilter>1 AND (4 OR 5)  AND (2 OR 3 OR 6 or 7) AND 8</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Survey_Details_Loaded__c</columns>
        <columns>Contact__c</columns>
        <columns>PDF_Emailed__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_FSL__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_RPM__c</columns>
        <columns>Customer_Sat_Likelihood_to_Renew__c</columns>
        <columns>Customer_Sat_Acct_Mgr_Satisfaction__c</columns>
        <columns>Customer_Sat_Maintenance_Satisfaction__c</columns>
        <columns>Customer_Sat_Shop_Communications__c</columns>
        <columns>Survey_Conducted_By__c</columns>
        <columns>Failed_Survey__c</columns>
        <columns>Last_PDF_Emailed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>RS-08776-111212</value>
        </filters>
        <filters>
            <field>Customer_Sat_Acct_Mgr_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Maintenance_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_FSL__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_RPM__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Likelihood_to_Renew__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Shop_Communications__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Survey_Submission_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/1/2012 12:00 AM</value>
        </filters>
        <label>CS Surveys - Special Email Request</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Close_Case_Surveys</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contact__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ryder_Surveys__c.Closed_Case_Survey</value>
        </filters>
        <label>Close Case Surveys</label>
    </listViews>
    <listViews>
        <fullName>Completed_CS_Surveys_By_Date</fullName>
        <booleanFilter>1 AND (2 OR 3  OR 6) AND (4 OR 5) AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Contact__c</columns>
        <columns>Survey_Details_Loaded__c</columns>
        <columns>PDF_Emailed__c</columns>
        <columns>Last_PDF_Emailed_Date__c</columns>
        <columns>Customer_Sat_Acct_Mgr_Satisfaction__c</columns>
        <columns>Customer_Sat_Maintenance_Satisfaction__c</columns>
        <columns>Customer_Sat_Shop_Communications__c</columns>
        <columns>Customer_Sat_Likelihood_to_Renew__c</columns>
        <columns>Customer_Sat_Willingness_to_Refer__c</columns>
        <columns>Survey_Conducted_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Customer_Sat_Overall_Satisfaction_FSL__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_RPM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Satisfaction_Survey__c</field>
            <operation>greaterThan</operation>
            <value>http</value>
        </filters>
        <filters>
            <field>Customer_Sat_Acct_Mgr_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Maintenance_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_FSL__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_RPM__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Likelihood_to_Renew__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>RS-02666-020712</value>
        </filters>
        <label>Completed CS Surveys By Date</label>
    </listViews>
    <listViews>
        <fullName>Completed_CS_Surveys_Mailed_After_Aug_17</fullName>
        <booleanFilter>1 AND (2 OR 3  OR 6) AND (4 OR 5) AND 7 AND 8 AND 9</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Contact__c</columns>
        <columns>Survey_Details_Loaded__c</columns>
        <columns>PDF_Emailed__c</columns>
        <columns>Last_PDF_Emailed_Date__c</columns>
        <columns>Customer_Sat_Acct_Mgr_Satisfaction__c</columns>
        <columns>Customer_Sat_Maintenance_Satisfaction__c</columns>
        <columns>Customer_Sat_Shop_Communications__c</columns>
        <columns>Customer_Sat_Likelihood_to_Renew__c</columns>
        <columns>Customer_Sat_Willingness_to_Refer__c</columns>
        <columns>Survey_Conducted_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Customer_Sat_Overall_Satisfaction_FSL__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_RPM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Satisfaction_Survey__c</field>
            <operation>contains</operation>
            <value>http</value>
        </filters>
        <filters>
            <field>Customer_Sat_Acct_Mgr_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Maintenance_Satisfaction__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_FSL__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Overall_Satisfaction_RPM__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Customer_Sat_Likelihood_to_Renew__c</field>
            <operation>equals</operation>
            <value>10,9,8,7,6,5,4,3,2,1,Don&apos;t Know</value>
        </filters>
        <filters>
            <field>Survey_Submission_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Last_PDF_Emailed_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>8/23/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>Last_PDF_Emailed_Date__c</field>
            <operation>lessThan</operation>
            <value>8/25/2012 12:00 AM</value>
        </filters>
        <label>Completed CS Surveys Mailed After Aug 17</label>
        <sharedTo>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_Customer_Sat_Surveys</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Contact__c</columns>
        <columns>Survey_Details_Loaded__c</columns>
        <columns>PDF_Emailed__c</columns>
        <columns>Last_PDF_Emailed_Date__c</columns>
        <columns>Customer_Sat_Acct_Mgr_Satisfaction__c</columns>
        <columns>Customer_Sat_Maintenance_Satisfaction__c</columns>
        <columns>Customer_Sat_Shop_Communications__c</columns>
        <columns>Customer_Sat_Likelihood_to_Renew__c</columns>
        <columns>Customer_Sat_Willingness_to_Refer__c</columns>
        <columns>Survey_Conducted_By__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Customer_Sat_Overall_Satisfaction_FSL__c</columns>
        <columns>Customer_Sat_Overall_Satisfaction_RPM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Satisfaction_Survey__c</field>
            <operation>contains</operation>
            <value>http</value>
        </filters>
        <filters>
            <field>Survey_Details_Loaded__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>RS-03898-033012</value>
        </filters>
        <label>Completed CS Surveys Saad</label>
    </listViews>
</CustomObject>